TestApp: Add reference to Slab

--- a/OatmealDome.Slab.TestApp/OatmealDome.Slab.TestApp.csproj
+++ b/OatmealDome.Slab.TestApp/OatmealDome.Slab.TestApp.csproj
@@ -8,4 +8,8 @@
         <RootNamespace>OatmealDome.Slab.TestApp</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\OatmealDome.Slab\OatmealDome.Slab.csproj" />
+    </ItemGroup>
+
 </Project>
