Mongo: Add service for MongoDB database access

--- a/OatmealDome.Slab.TestApp/appsettings.json
+++ b/OatmealDome.Slab.TestApp/appsettings.json
@@ -1,5 +1,9 @@
 {
   "Test": {
     "Key": "Value"
+  },
+  "Mongo": {
+    "ConnectionString": "mongodb://root:password@127.0.0.1",
+    "Database": "slab"
   }
 }
