--- a/OatmealDome.Slab.Mongo/OatmealDome.Slab.Mongo.csproj
+++ b/OatmealDome.Slab.Mongo/OatmealDome.Slab.Mongo.csproj
@@ -1,22 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>OatmealDome.Slab.TestApp</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OatmealDome.Slab.Mongo\OatmealDome.Slab.Mongo.csproj" />
       <ProjectReference Include="..\OatmealDome.Slab\OatmealDome.Slab.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+      <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
     </ItemGroup>
 
 </Project>
