--- a/OatmealDome.Slab/OatmealDome.Slab.csproj
+++ b/OatmealDome.Slab/OatmealDome.Slab.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
+      <PackageReference Include="Quartz" Version="3.14.0" />
+      <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
     </ItemGroup>
 
 </Project>
