--- a/OatmealDome.Slab/OatmealDome.Slab.csproj
+++ b/OatmealDome.Slab/OatmealDome.Slab.csproj
@@ -10,6 +10,12 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
       <PackageReference Include="Quartz" Version="3.14.0" />
       <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
+      <PackageReference Include="Serilog" Version="4.2.0" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+      <PackageReference Include="Serilog.Sinks.Slack" Version="2.2.2" />
     </ItemGroup>
 
 </Project>
