SlabApplication: Allow setting configuration values by appsettings.Local.json

--- a/OatmealDome.Slab.TestConsoleApp/appsettings.json
+++ b/OatmealDome.Slab.TestConsoleApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Test": {
-    "Key": "Value"
+    "Key": "Value",
+    "OverriddenByLocalKey": "DefaultValueByNormalJson"
   },
   "Mongo": {
     "ConnectionString": "mongodb://root:password@127.0.0.1",
