S3: Add singleton class for interacting with S3

--- a/OatmealDome.Slab.TestConsoleApp/OatmealDome.Slab.TestConsoleApp.csproj
+++ b/OatmealDome.Slab.TestConsoleApp/OatmealDome.Slab.TestConsoleApp.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\OatmealDome.Slab.Mongo\OatmealDome.Slab.Mongo.csproj" />
+      <ProjectReference Include="..\OatmealDome.Slab.S3\OatmealDome.Slab.S3.csproj" />
       <ProjectReference Include="..\OatmealDome.Slab\OatmealDome.Slab.csproj" />
     </ItemGroup>
 
